add response user info
